<resources>
    <string name="app_name">FiveSeconds</string>
    <string name="new_game">NEW GAME</string>
    <string name="settings">SETTINGS</string>
    <string name="start_game">Start</string>
    <string name="number_of_rounds">Number of rounds</string>
    <string name="number_of_players">Number of players</string>
    <string name="correct">CORRECT</string>
    <string name="incorrect">INCORRECT</string>
    <string name="add_players_label">Add Player (max 6 players)</string>
    <string name="add_player_button">Add Player</string>
    <string name="enter_player_name">Enter player name</string>
    <string name="max_player_error">Max player error!</string>
    <string name="incorrect_number_of_rounds">Incorrect number of rounds or players!</string>
    <string name="answer_dialog_title">Answer</string>
    <string name="answer_dialog_message">CORRECT ?</string>
    <string name="sound_downloading_progressbar_title">Downloading sounds pack</string>
    <string name="sound_unpacking_progressbar_title">Unpacking sounds pack</string>
    <string name="final_scores">GAME OVER\nFinal score:</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="choose_question_sets_label_text">Choose question sets:</string>
    <string name="game_type_label">Game type:</string>
    <string name="language_title">Language</string>
    <string name="LangDialogTitle">Select language:</string>
    <string name="LangSummary">Application language.\nIt is necessary to restart application for applying changes!</string>
    <string name="default_game_type">Default Game type:</string>
    <string name="add_time_value_title">Additional time (sec):</string>
    <string name="default_number_of_rounds">Number of rounds:</string>
    <string name="incorrect_questionsets">No one questions set is not chosen!</string>
    <string name="quit_dialog_title">Exit to main menu?</string>
    <string name="sound_pack_is_not_available">Sounds pack for %s is not downloaded!</string>
    <string name="mobile_network_using_dialog_title">Confirm using mobile network.</string>
    <string name="internet_is_not_available">Internet isn\'t available</string>
    <string name="change_settings_notice_label">For the changes to take effect, you must restart the application.</string>
    <string name="change_language_dialog_title">Language was changed, you must restart the application. Do close the app?</string>
    <string name="seconds">sec</string>
    <string name="delete_sounds_files">Delete all sounds files</string>
    <string name="deleting_sounds_dialog_title">Deleting sound files</string>
    <string name="back">Back</string>
    <string name="five_seconds_game_rule">Answer in 5 seconds</string>
    <string name="rules_text"><b>Game goal:</b>\nGet more points by the end of the game than other players by answering questions correctly.\n\n<b>Game process:</b>\nIt\'s simple: you need to have time to give three answers to the question before the timer runs out.\n\nThe timer works differently depending on the game mode:\n\nIn the <b><i>\"Autoplay question\"</i></b> mode, questions are voiced, the timer starts immediately after the question is asked.\n\nIn the <b><i>\"Additional time for reading\"</i></b> mode, the question is not voiced, and additional time for reading the question is added to the standard timer time (the time is specified in the settings).\n\nIn the <b><i>\"Manual\"</i></b> mode, the timer starts only after the player presses the \"Start\" button.</string>
    <string name="next">Next</string>
    <string name="sound_files_deleted_successfully">Sound files deleted successfully!</string>
    <string name="buy">Buy</string>
    <string name="bought">Bought</string>
    <string name="round">Round</string>
    <string name="update">Update</string>
    <string name="available_question_pack">Available question pack</string>
    <string name="sound_file_downloaded">Sound file downloaded</string>
    <string name="sound_file_download_error">Download error!\nPlease try again. Error code:</string>
    <string name="play_sound_after_timer_ends">Play sound after timer ends</string>
    <string name="download_soundspack">Download soundspack</string>
    <string name="launch_playstore_app_error">Couldn\'t launch the Google Playstore app</string>
    <string name="rate_app_title">"If you enjoy using FiveSecondsGame, please take a moment to rate it. Thanks for your support!</string>
    <string name="rate">Rate</string>
    <string name="remind_later">Remind later</string>
    <string name="dont_ask_me_again">Don\'t ask me again</string>
    <string name="timer_duration">Timer duration (sec):</string>
    <string-array name="game_type_list">
        <item>Auto play sound</item>
        <item>Add time for reading</item>
        <item>Manual start</item>
    </string-array>
    <string-array name="language_list">
        <item>System language</item>
        <item>English</item>
        <item>Russian</item>
    </string-array>
    <string-array name="language_list_values">
        <item>default</item>
        <item>en</item>
        <item>ru</item>
    </string-array>
</resources>
