<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_clean"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/number_of_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="16dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/number_of_questions_seek_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/number_of_questions_seek_bar"
        app:layout_constraintTop_toTopOf="@+id/number_of_questions_seek_bar" />

    <SeekBar
        android:id="@+id/number_of_questions_seek_bar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/numberOfQuestionLabel"
        app:layout_constraintEnd_toEndOf="@+id/number_of_question_label"
        app:layout_constraintStart_toStartOf="@+id/number_of_question_label"
        app:layout_constraintTop_toBottomOf="@+id/number_of_question_label" />

    <TextView
        android:id="@+id/number_of_question_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/number_of_questions"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_player_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_players_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_players_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="12"
        android:hint="@string/enter_player_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_players_label" />

    <ImageButton
        android:id="@+id/add_player_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@null"
        android:text="@string/add_player_button"
        app:layout_constraintBottom_toBottomOf="@+id/player_name"
        app:layout_constraintStart_toEndOf="@+id/player_name"
        app:layout_constraintTop_toTopOf="@+id/player_name"
        app:srcCompat="@drawable/add_player" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/nextGameSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:onClick="onNextGameSettingsButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_media_next" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/players_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/add_player_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_name" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/question_sets_recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/number_of_questions_seek_bar"
        app:layout_constraintTop_toBottomOf="@+id/number_of_questions_seek_bar" />


</android.support.constraint.ConstraintLayout>