<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_clean"
    tools:context=".NewGameSettingsFragment">

    <TextView
        android:id="@+id/game_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/game_type_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/game_type_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_sets_recycler_view" />

    <Spinner
        android:id="@+id/game_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:entries="@array/game_type_list"
        android:popupBackground="@color/blueLight"
        app:layout_constraintStart_toEndOf="@+id/game_type_label"
        app:layout_constraintTop_toBottomOf="@+id/question_sets_recycler_view" />

    <TextView
        android:id="@+id/numberOfRoundsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/number_of_rounds"
        android:textSize="24sp"
        android:popupBackground="@color/blueLight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/numberOfRoundsSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        app:layout_constraintBottom_toBottomOf="@+id/numberOfRoundsLabel"
        app:layout_constraintEnd_toStartOf="@+id/numberOfRounds"
        app:layout_constraintStart_toEndOf="@+id/numberOfRoundsLabel"
        app:layout_constraintTop_toTopOf="@+id/numberOfRoundsLabel" />

    <TextView
        android:id="@+id/numberOfRounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/numberOfRoundsLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/startNewGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:src="@drawable/anim_play_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_type_spinner" />

    <TextView
        android:id="@+id/question_sets_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/choose_question_sets_label_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberOfRoundsLabel" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/question_sets_recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_sets_label" />

    <TextView
        android:id="@+id/additional_time_value_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/game_type_spinner"
        app:layout_constraintStart_toEndOf="@+id/game_type_spinner"
        app:layout_constraintTop_toTopOf="@+id/game_type_spinner" />

</android.support.constraint.ConstraintLayout>